--- a/public/locales/en/user-authentication.json
+++ b/public/locales/en/user-authentication.json
@@ -6,57 +6,57 @@
   },
   "login": {
     "form": {
-      "cardDescription": "Enter your email below to login to your account.",
-      "cardTitle": "Welcome back",
-      "dividerText": "Or continue with",
+      "card-description": "Enter your email below to login to your account.",
+      "card-title": "Welcome back",
+      "divider-text": "Or continue with",
       "email": "Email",
-      "emailPlaceholder": "You email address ...",
+      "email-placeholder": "You email address ...",
       "google": "Google",
       "login-failed": "Login failed. Please try again.",
-      "registerLink": "Sign up",
-      "registerPrompt": "Not a member?",
-      "submitButton": "Login",
-      "submitButtonLoading": "Logging in ...",
+      "register-link": "Sign up",
+      "register-prompt": "Not a member?",
+      "submit-button": "Login",
+      "submit-button-loading": "Logging in ...",
       "user-doesnt-exist": "User with given email doesn't exist. Did you mean to create a new account instead?"
     },
-    "magicLink": {
-      "cardDescription": "We've sent a secure login link to your email address. Please check your inbox and click the link to access your account.",
-      "cardTitle": "Check your email",
-      "countdownMessage_one": "Once you click the link, <1>please close this tab</1>. If you haven't received the email within {{count}} second, you may request another link.",
-      "countdownMessage_other": "Once you click the link, <1>please close this tab</1>. If you haven't received the email within {{count}} seconds, you may request another link.",
-      "countdownMessage_zero": "Once you click the link, <1>please close this tab</1>. If you haven't received the email, you may request another login link now.",
-      "resendButton": "Request new login link",
-      "resendButtonLoading": "Sending...",
-      "resendSuccess": "A new login link has been sent to your email address. Please check your inbox."
+    "magic-link": {
+      "card-description": "We've sent a secure login link to your email address. Please check your inbox and click the link to access your account.",
+      "card-title": "Check your email",
+      "countdown-message_one": "Once you click the link, <1>please close this tab</1>. If you haven't received the email within {{count}} second, you may request another link.",
+      "countdown-message_other": "Once you click the link, <1>please close this tab</1>. If you haven't received the email within {{count}} seconds, you may request another link.",
+      "countdown-message_zero": "Once you click the link, <1>please close this tab</1>. If you haven't received the email, you may request another login link now.",
+      "resend-button": "Request new login link",
+      "resend-button-loading": "Sending...",
+      "resend-success": "A new login link has been sent to your email address. Please check your inbox."
     },
-    "pageTitle": "Login"
+    "page-title": "Login"
   },
   "register": {
     "form": {
-      "cardDescription": "Create your account to get started.",
-      "cardTitle": "New here?",
-      "dividerText": "Or continue with",
+      "card-description": "Create your account to get started.",
+      "card-title": "New here?",
+      "divider-text": "Or continue with",
       "email": "Email",
-      "emailPlaceholder": "You email address ...",
+      "email-placeholder": "You email address ...",
       "google": "Google",
-      "loginLink": "Log in",
-      "loginPrompt": "Already have an account?",
+      "login-link": "Log in",
+      "login-prompt": "Already have an account?",
       "registration-failed": "Registration failed. Please try again.",
-      "submitButton": "Register",
-      "submitButtonLoading": "Registering ...",
-      "termsAndPrivacy": "By creating an account, you agree to our <1>Terms of Service</1> and <2>Privacy Policy</2>.",
+      "submit-button": "Register",
+      "submit-button-loading": "Registering ...",
+      "terms-and-privacy": "By creating an account, you agree to our <1>Terms of Service</1> and <2>Privacy Policy</2>.",
       "user-already-exists": "User with given email already exists. Did you mean to log in instead?"
     },
-    "magicLink": {
-      "cardDescription": "We've sent a verification link to your email address. Please check your inbox and click the link to complete your registration.",
-      "cardTitle": "Verify your email",
-      "countdownMessage_one": "Once you click the link, <1>please close this tab</1>. If you haven't received the email within {{count}} second, you may request another verification link.",
-      "countdownMessage_other": "Once you click the link, <1>please close this tab</1>. If you haven't received the email within {{count}} seconds, you may request another verification link.",
-      "countdownMessage_zero": "Once you click the link, <1>please close this tab</1>. If you haven't received the email, you may request another verification link now.",
-      "resendButton": "Request new verification link",
-      "resendButtonLoading": "Sending...",
-      "resendSuccess": "A new verification link has been sent to your email address. Please check your inbox."
+    "magic-link": {
+      "card-description": "We've sent a verification link to your email address. Please check your inbox and click the link to complete your registration.",
+      "card-title": "Verify your email",
+      "countdown-message_one": "Once you click the link, <1>please close this tab</1>. If you haven't received the email within {{count}} second, you may request another verification link.",
+      "countdown-message_other": "Once you click the link, <1>please close this tab</1>. If you haven't received the email within {{count}} seconds, you may request another verification link.",
+      "countdown-message_zero": "Once you click the link, <1>please close this tab</1>. If you haven't received the email, you may request another verification link now.",
+      "resend-button": "Request new verification link",
+      "resend-button-loading": "Sending...",
+      "resend-success": "A new verification link has been sent to your email address. Please check your inbox."
     },
-    "pageTitle": "Register"
+    "page-title": "Register"
   }
 }
