feat(organization settings): add layout

--- a/public/locales/en/organizations.json
+++ b/public/locales/en/organizations.json
@@ -65,5 +65,11 @@
     "card-title": "Your organizations",
     "page-title": "Organization list",
     "title": "Organization List"
+  },
+  "settings": {
+    "layout": {
+      "general": "General",
+      "settings-nav": "Settings navigation"
+    }
   }
 }
