feat(invite-link): add being able to join a team after registering or logging in

--- a/public/locales/en/user-authentication.json
+++ b/public/locales/en/user-authentication.json
@@ -12,6 +12,8 @@
       "email": "Email",
       "email-placeholder": "You email address ...",
       "google": "Google",
+      "join-organization": "Log in to join {{organizationName}}",
+      "join-organization-description": "{{creatorName}} has invited you to join {{organizationName}}.",
       "login-failed": "Login failed. Please try again.",
       "register-link": "Sign up",
       "register-prompt": "Not a member?",
@@ -40,6 +42,8 @@
       "email": "Email",
       "email-placeholder": "You email address ...",
       "google": "Google",
+      "join-organization": "Register to join {{organizationName}}",
+      "join-organization-description": "{{creatorName}} has invited you to join {{organizationName}}.",
       "login-link": "Log in",
       "login-prompt": "Already have an account?",
       "registration-failed": "Registration failed. Please try again.",
