feat(storage): delete images when updating an avatar or logo or deleting the entities

--- a/public/locales/en/settings.json
+++ b/public/locales/en/settings.json
@@ -46,7 +46,8 @@
     },
     "page-title": "Account",
     "toast": {
-      "user-account-updated": "Your account has been updated"
+      "user-account-updated": "Your account has been updated",
+      "user-account-deleted": "Your account has been deleted"
     }
   }
 }
