--- a/public/locales/en/organizations.json
+++ b/public/locales/en/organizations.json
@@ -63,7 +63,7 @@
       "plan": {
         "high": "Business",
         "low": "Hobby",
-        "mid": "Hobby"
+        "mid": "Startup"
       }
     }
   },
