chore(packages): upgrade all packages to their latest versions

--- a/public/locales/en/onboarding.json
+++ b/public/locales/en/onboarding.json
@@ -6,12 +6,12 @@
   "organization": {
     "card-description": "You can invite other users to join your organization later through the organization settings.",
     "card-title": "Create your organization",
+    "logo-invalid": "Logo must be valid.",
     "logo-label": "Logo",
-    "logo-must-be-string": "Logo must be a string.",
     "logo-must-be-url": "Logo must be a valid URL.",
     "name-max-length": "Your organization name must be at most 255 characters long.",
     "name-min-length": "Your organization name must be at least 3 characters long.",
-    "name-must-be-string": "Your organization's name must be a string.",
+    "name-required": "Please enter your organization name (required).",
     "organization-name-description": "Please enter the name of your organization.",
     "organization-name-label": "Organization name",
     "organization-name-placeholder": "Your organization's name ...",
@@ -26,7 +26,7 @@
     "card-title": "Create your account",
     "name-max-length": "Your name must be at most 128 characters long.",
     "name-min-length": "Your name must be at least 2 characters long.",
-    "name-must-be-string": "Your public name must be a string.",
+    "name-required": "Please enter your name (required).",
     "save": "Save",
     "saving": "Saving ...",
     "title": "User account",
