--- a/public/locales/en/billing.json
+++ b/public/locales/en/billing.json
@@ -202,11 +202,7 @@
       "high": {
         "cta": "Start a 14-day free trial",
         "description": "For professionals and businesses who want to grow.",
-        "features": [
-          "SSO",
-          "Up to 25 members",
-          "Priority support"
-        ],
+        "features": ["SSO", "Up to 25 members", "Priority support"],
         "features-title": "Everything in Startup, plus:",
         "title": "Business"
       },
