--- a/public/locales/en/user-authentication.json
+++ b/public/locales/en/user-authentication.json
@@ -1,25 +1,23 @@
 {
-  "common": {
-    "email-invalid": "A valid email consists of characters, '@' and '.'.",
-    "email-required": "Please enter a valid email (required)."
+  "layout": {
+    "backgroundPathsTitle": "Animated background paths",
+    "home": "Home",
+    "quote": "This authentication system has transformed how we handle user logins. The magic link flow is seamless and our users love it.",
+    "quoteAuthor": "Alex Chen, Lead Developer"
   },
   "login": {
+    "emailLabel": "Email",
+    "emailPlaceholder": "you@example.com",
+    "errors": {
+      "invalidEmail": "Please enter a valid email address."
+    },
     "form": {
-      "card-description": "Enter your email below to login to your account.",
-      "card-title": "Welcome back",
-      "divider-text": "Or continue with",
-      "email": "Email",
-      "email-placeholder": "You email address ...",
-      "google": "Google",
       "join-organization": "Log in to join {{organizationName}}",
       "join-organization-description": "{{creatorName}} has invited you to join {{organizationName}}.",
       "login-failed": "Login failed. Please try again.",
-      "register-link": "Sign up",
-      "register-prompt": "Not a member?",
-      "submit-button": "Login",
-      "submit-button-loading": "Logging in ...",
       "user-doesnt-exist": "User with given email doesn't exist. Did you mean to create a new account instead?"
     },
+    "googleButton": "Continue with Google",
     "magic-link": {
       "alert-description": "Remember to check your spam folder.",
       "card-description": "We've sent a secure login link to your email address. Please check your inbox and click the link to access your account.",
@@ -31,26 +29,30 @@
       "resend-button-loading": "Sending...",
       "resend-success": "A new login link has been sent to your email address. Please check your inbox."
     },
-    "page-title": "Login"
+    "page-title": "Login",
+    "separator": "Or",
+    "signupCta": "Don't have an account? <signup>Sign up</signup>",
+    "submitButton": "Sign in with Email",
+    "submitButtonSubmitting": "Signing in...",
+    "subtitle": "Enter your email below to sign in to your account",
+    "title": "Welcome back"
   },
   "register": {
+    "emailLabel": "Email",
+    "emailPlaceholder": "you@example.com",
+    "errors": {
+      "invalidEmail": "Please enter a valid email address."
+    },
     "form": {
-      "card-description": "Create your account to get started.",
-      "card-title": "New here?",
-      "divider-text": "Or continue with",
-      "email": "Email",
-      "email-placeholder": "You email address ...",
-      "google": "Google",
       "join-organization": "Register to join {{organizationName}}",
       "join-organization-description": "{{creatorName}} has invited you to join {{organizationName}}.",
-      "login-link": "Log in",
-      "login-prompt": "Already have an account?",
       "registration-failed": "Registration failed. Please try again.",
-      "submit-button": "Register",
-      "submit-button-loading": "Registering ...",
       "terms-and-privacy": "By creating an account, you agree to our <1>Terms of Service</1> and <2>Privacy Policy</2>.",
       "user-already-exists": "User with given email already exists. Did you mean to log in instead?"
     },
+    "googleButton": "Continue with Google",
+    "legal": "By clicking continue, you agree to our <tos>Terms of Service</tos> and <pp>Privacy Policy</pp>.",
+    "loginCta": "Already have an account? <login>Sign in</login>",
     "magic-link": {
       "alert-description": "Remember to check your spam folder.",
       "card-description": "We've sent a verification link to your email address. Please check your inbox and click the link to complete your registration.",
@@ -62,6 +64,11 @@
       "resend-button-loading": "Sending...",
       "resend-success": "A new verification link has been sent to your email address. Please check your inbox."
     },
-    "page-title": "Register"
+    "page-title": "Register",
+    "separator": "Or",
+    "submitButton": "Create Account",
+    "submitButtonSubmitting": "Creating account...",
+    "subtitle": "Enter your email below to create your account",
+    "title": "Create an account"
   }
 }
