refactor(onboarding): new onboarding flow with Conform

--- a/public/locales/en/onboarding.json
+++ b/public/locales/en/onboarding.json
@@ -1,37 +1,46 @@
 {
-  "common": {
-    "onboarding": "Onboarding",
-    "onboarding-progress": "Onboarding progress"
+  "layout": {
+    "quote": "This platform has streamlined our entire workflow. The onboarding process was intuitive and got our team up and running in minutes.",
+    "quoteAuthor": "Sarah Mitchell, Product Manager"
   },
   "organization": {
-    "card-description": "You can invite other users to join your organization later through the organization settings.",
-    "card-title": "Create your organization",
-    "logo-invalid": "Logo must be valid.",
-    "logo-label": "Logo",
-    "logo-must-be-url": "Logo must be a valid URL.",
-    "name-max-length": "Your organization name must be at most 255 characters long.",
-    "name-min-length": "Your organization name must be at least 3 characters long.",
-    "name-required": "Please enter your organization name (required).",
-    "organization-name-description": "Please enter the name of your organization.",
-    "organization-name-label": "Organization name",
-    "organization-name-placeholder": "Your organization's name ...",
-    "save": "Save",
-    "saving": "Saving ...",
+    "errors": {
+      "invalidFileType": "Please upload a valid image file.",
+      "logoTooLarge": "Logo must be less than 1MB.",
+      "nameMax": "Your organization name must be at most 255 characters long.",
+      "nameMin": "Your organization name must be at least 3 characters long."
+    },
+    "heading": "Create your organization",
+    "logoDescription": "Upload a logo to represent your organization.",
+    "logoFormats": "PNG, JPG, GIF up to 1MB",
+    "logoLabel": "Logo",
+    "logoPreviewAlt": "Organization logo preview",
+    "nameDescription": "Please enter the name of your organization.",
+    "nameLabel": "Organization name",
+    "namePlaceholder": "Your organization's name ...",
+    "save": "Continue",
+    "saving": "Creating ...",
+    "subtitle": "You can invite other users to join your organization later through the organization settings.",
     "title": "Organization"
   },
   "user-account": {
-    "avatar-label": "Avatar",
-    "avatar-must-be-url": "Avatar must be a valid URL.",
-    "card-description": "Welcome to the React Router SaaS template! Please create your user account to get started.",
-    "card-title": "Create your account",
-    "name-max-length": "Your name must be at most 128 characters long.",
-    "name-min-length": "Your name must be at least 2 characters long.",
-    "name-required": "Please enter your name (required).",
-    "save": "Save",
+    "errors": {
+      "invalidFileType": "Please upload a valid image file.",
+      "nameMax": "Your name must be at most 128 characters long.",
+      "nameMin": "Your name must be at least 2 characters long.",
+      "photoTooLarge": "Profile photo must be less than 1MB."
+    },
+    "heading": "Create your account",
+    "nameDescription": "Please enter your full name for public display within your organization.",
+    "nameLabel": "Name",
+    "namePlaceholder": "Your full name ...",
+    "profilePhotoDescription": "Upload a profile photo to personalize your account.",
+    "profilePhotoFormats": "PNG, JPG, GIF up to 1MB",
+    "profilePhotoLabel": "Profile Photo",
+    "profilePhotoPreviewAlt": "Profile photo preview",
+    "save": "Continue",
     "saving": "Saving ...",
-    "title": "User account",
-    "user-name-description": "Please enter your full name for public display within your organization.",
-    "user-name-label": "Name",
-    "user-name-placeholder": "Your full name ..."
+    "subtitle": "Welcome to the React Router SaaS template! Please create your user account to get started.",
+    "title": "User account"
   }
 }
