--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,5 +1,8 @@
 {
   "app-name": "React Router SaaS Template",
+  "avatarUpload": {
+    "fileSizeError": "{{fileName}} is too large. Maximum file size is {{maxSize}}."
+  },
   "not-found": {
     "description": "Sorry, we couldn't find the page you're looking for.",
     "home-link": "Return Home",
