--- a/public/locales/en/organizations.json
+++ b/public/locales/en/organizations.json
@@ -99,37 +99,39 @@
   },
   "settings": {
     "general": {
-      "danger-zone": {
-        "cancel": "Cancel",
-        "delete-button": "Delete organization",
+      "dangerZone": {
+        "cancel-button": "Cancel",
+        "confirmation-label": "To confirm, type \"{{organizationName}}\" in the box below",
+        "confirmation-placeholder": "Enter organization name...",
+        "delete-button": "Delete this organization",
+        "delete-button-submitting": "Deleting organization...",
         "delete-description": "Once deleted, it will be gone forever. Please be certain.",
-        "delete-this-organization": "Delete this organization",
         "delete-title": "Delete this organization",
-        "deleting": "Deleting organization...",
-        "dialog-confirmation-label": "To confirm, type \"{{organizationName}}\" in the box below",
-        "dialog-confirmation-placeholder": "Enter organization name...",
         "dialog-description": "Are you sure you want to delete this organization? This action cannot be undone.",
         "dialog-title": "Delete Organization",
-        "title": "Danger Zone"
+        "errors": {
+          "confirmationMismatch": "The confirmation text doesn't match the organization name.",
+          "confirmationRequired": "Please enter the organization name to confirm."
+        },
+        "title": "Danger Zone",
+        "trigger-button": "Delete organization"
       },
       "description": "General settings for this organization.",
+      "errors": {
+        "invalidFileType": "Invalid file type. Only PNG, JPG, JPEG, GIF, and WebP images are allowed.",
+        "logoTooLarge": "Logo must be less than 1MB.",
+        "nameMax": "Organization name must be at most 255 characters long.",
+        "nameMin": "Organization name must be at least 3 characters long."
+      },
       "form": {
-        "errors": {
-          "delete-old-logo-failed": "Failed to delete old logo.",
-          "unexpected-error": "An unexpected error occurred.",
-          "upload-failed": "Logo upload failed."
-        },
-        "logo-alt": "Organization logo",
         "logo-description": "Your organization's logo will be shown across the application.",
-        "logo-invalid-mime-type": "Invalid file type. Allowed file types are JPG, PNG, and JPEG.",
+        "logo-formats": "PNG, JPG, GIF, or WebP (max. 1MB)",
         "logo-label": "Organization logo",
-        "logo-must-be-url": "Logo must be a valid URL.",
-        "name-description": "Your organization's public display name. <1>Warning:</1> Changing the name will break all existing links to your organization.",
+        "logo-preview-alt": "Organization logo preview",
+        "name-description": "Your organization's public display name. <bold>Warning:</bold> Changing the name will <warning>break all existing links</warning> to your organization.",
         "name-label": "Organization name",
-        "name-max-length": "Organization name must be less than 255 characters long.",
-        "name-min-length": "Organization name must be at least 3 characters long.",
         "name-placeholder": "Organization name ...",
-        "name-required": "Organization name is required.",
+        "name-warning-content": "When you change your organization's name, the URL slug will change. This means any bookmarked links or shared URLs will no longer work. Make sure to update any references to the old URL.",
         "save": "Save changes",
         "saving": "Saving changes ..."
       },
